[package]
name = "webtoon"
version = "0.7.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Webtoon-Studio/webtoon/"
documentation = "https://docs.rs/webtoon"
categories = ["web-programming::http-client"]
description = "Client for interacting with various webtoon websites."
keywords = ["webtoon", "webtoons", "naver", "tapas", "client"]

[package.metadata.playground]
features = ["rss"]

[package.metadata.docs.rs]
features = ["rss"]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# currently using `Mutex`, `sleep`, and `Semaphore`.
tokio = { version = "1", features = ["sync", "time", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["brotli", "json", "rustls-tls"]}
anyhow = "1"
thiserror = "2"
scraper = "0.23"
# used for getting the url from the css of the thumbnail and the season numbers from the title
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
chrono = { version = "0.4",default-features = false, features = ["clock", "oldtime", "std", "serde"] }
html-escape = "0.2"
url = "2"
# used when the session needs to be sent in a url
urlencoding = "2"
parking_lot = "0.12"
fastrand = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"]}

# feature = `rss`
rss = { version = "2", optional = true }

[profile.dev.package.image]
opt-level = 2

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1", features = ["full"] }

[features]
default = []
rss = ["dep:rss"]

# `webtoons.com`
[[example]]
name = "webtoons-search"
path = "examples/webtoons/search.rs"

[[example]]
name = "webtoons-originals"
path = "examples/webtoons/originals.rs"

[[example]]
name = "webtoons-canvas"
path = "examples/webtoons/canvas.rs"

[[example]]
name = "webtoons-creator"
path = "examples/webtoons/creator.rs"

[[example]]
name = "webtoons-webtoon"
path = "examples/webtoons/webtoon.rs"

[[example]]
name = "webtoons-rss"
path = "examples/webtoons/rss.rs"
required-features = ["rss"]

[[example]]
name = "webtoons-episodes"
path = "examples/webtoons/episodes.rs"

[[example]]
name = "webtoons-posts"
path = "examples/webtoons/posts.rs"

[[example]]
name = "webtoons-download"
path = "examples/webtoons/download.rs"

# `comic.naver.com`
[[example]]
name = "naver-webtoon"
path = "examples/naver/webtoon.rs"

[[example]]
name = "naver-episodes"
path = "examples/naver/episodes.rs"

[[example]]
name = "naver-episode"
path = "examples/naver/episode.rs"

[[example]]
name = "naver-posts"
path = "examples/naver/posts.rs"

[[example]]
name = "naver-download"
path = "examples/naver/download.rs"

[[example]]
name = "naver-creator"
path = "examples/naver/creator.rs"
