[package]
name = "webtoon"
version = "0.9.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Webtoon-Studio/webtoon/"
documentation = "https://docs.rs/webtoon"
categories = ["web-programming::http-client"]
description = "Client for interacting with various webtoon websites."
keywords = ["webtoon", "webtoons", "naver", "tapas", "client"]

[package.metadata.playground]
features = ["rss"]

[package.metadata.docs.rs]
features = ["rss"]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Currently using `Mutex`, `sleep`, and `Semaphore`.
# When `feature = "download"` in enabled, it also uses `fs`.
tokio = { version = "1", features = ["sync", "time"] }
futures = "0.3"

url = "2"
# Used when the session needs to be sent in a URL
urlencoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["brotli", "json", "rustls-tls"]}

# Used for getting the URL from the CSS of the thumbnail and the season numbers from the title
regex = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = { version = "0.4",default-features = false, features = ["clock", "oldtime", "std", "serde"] }

scraper = "0.24"
html-escape = "0.2"

parking_lot = "0.12"

fastrand = "2"

anyhow = "1"
thiserror = "2"

# feature = `download`
image = { version = "0.25", default-features = false, features = ["png", "jpeg"], optional = true}

# `feature = "rss"` and `feature = "naver"`
rss = { version = "2", optional = true }

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1", features = ["full"] }

[features]
default = []
rss = ["dep:rss"]
download = ["dep:image", "tokio/fs"]
# `image` is needed as currently the only way to get the size of the episodes is
# to download the panels and then convert them to an image and use the metadata
# to get the sizes.
naver = ["dep:image"]

# `webtoons.com`
[[example]]
name = "webtoons-search"
path = "examples/webtoons/search.rs"

[[example]]
name = "webtoons-originals"
path = "examples/webtoons/originals.rs"

[[example]]
name = "webtoons-canvas"
path = "examples/webtoons/canvas.rs"

[[example]]
name = "webtoons-creator"
path = "examples/webtoons/creator.rs"

[[example]]
name = "webtoons-webtoon"
path = "examples/webtoons/webtoon.rs"

[[example]]
name = "webtoons-rss"
path = "examples/webtoons/rss.rs"
required-features = ["rss"]

[[example]]
name = "webtoons-episodes"
path = "examples/webtoons/episodes.rs"

[[example]]
name = "webtoons-posts"
path = "examples/webtoons/posts.rs"

[[example]]
name = "webtoons-download"
path = "examples/webtoons/download.rs"
required-features = ["download"]

# `comic.naver.com`
[[example]]
name = "naver-webtoon"
path = "examples/naver/webtoon.rs"
required-features = ["naver"]

[[example]]
name = "naver-episodes"
path = "examples/naver/episodes.rs"
required-features = ["naver"]

[[example]]
name = "naver-episode"
path = "examples/naver/episode.rs"
required-features = ["naver"]

[[example]]
name = "naver-posts"
path = "examples/naver/posts.rs"
required-features = ["naver"]

[[example]]
name = "naver-download"
path = "examples/naver/download.rs"
required-features = ["naver", "download"]

[[example]]
name = "naver-creator"
path = "examples/naver/creator.rs"
required-features = ["naver"]
